--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -1,211 +1,197 @@
+$font-stack: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+$font-stack-mono: 'Courier New', Courier, monospace;
+$border-radius: 4px;
+$border-color: #ddd !important;
+$background-color-light: #f8f8f8;
+$background-color-dark: rgba(27, 38, 54, 1);
+$color-text: #333;
+$color-text-muted: #999;
+
 html {
-    background-color: rgba(27, 38, 54, 1);
+    background-color: $background-color-dark;
 }
 
 body {
     margin: 0;
-    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-
     padding: 12px;
+    font-family: $font-stack;
+    background: white;
+    font-size: .80em;
 }
 
 @font-face {
     font-family: "Nunito";
     font-style: normal;
-    font-weight: 400;
-    src: local(""),
-    url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
+    font-weight: 100;
+    src: local(""), url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
 }
 
-#app {
-    height: 100vh;
+#App {
 }
+
 
 .diff-viewer {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 14px;
-    overflow: auto;
-    padding: 10px;
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    text-align: left;
+
+
+    .file-diff {
+        margin-bottom: 20px;
+
+        .hunk, .line {
+            white-space: pre;
+        }
+
+        .gutter {
+            text-align: right;
+            color: $color-text-muted;
+        }
+
+        .line {
+            &.insert {
+                background-color: #e6ffed;
+                color: #004d40;
+            }
+
+            &.delete {
+                background-color: #ffeef0;
+                color: #c62828;
+            }
+        }
+
+        .line-number {
+            color: $color-text-muted;
+            padding-right: 10px;
+        }
+
+        .code {
+            text-align: left;
+            color: $color-text !important;
+        }
+
+        &.diff-added {
+            background-color: #e6ffed;
+        }
+
+        &.diff-removed {
+            background-color: #ffeef0;
+        }
+
+        &.diff-code-insert {
+            background-color: #d4edda;
+            color: #155724;
+        }
+
+        &.diff-code-delete {
+            background-color: #f8d7da;
+            color: #721c24;
+        }
+    }
 }
 
-.file-diff {
+.input-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 20px;
+
+    .input {
+        padding: 10px 15px;
+        font-size: 16px;
+        border: 2px solid $border-color;
+        border-radius: $border-radius 0 0 $border-radius;
+        outline: none;
+        margin-right: -1px;
+    }
+
+    .btn {
+        padding: 10px 15px;
+        font-size: 16px;
+        background-color: #3498db;
+        border: 2px solid #3498db;
+        color: white;
+        cursor: pointer;
+        border-radius: 0 $border-radius $border-radius 0;
+        outline: none;
+        transition: background-color 0.2s, border-color 0.2s, color 0.2s;
+
+        &:hover, &:focus {
+            background-color: #2980b9;
+            border-color: #2980b9;
+        }
+    }
+
+    @media (max-width: 600px) {
+        flex-direction: column;
+
+        .input, .btn {
+            width: 100%;
+            border-radius: $border-radius;
+        }
+
+        .input {
+            margin-bottom: 10px;
+            margin-right: 0;
+        }
+    }
 }
 
-.file-diff h3 {
-    margin: 0 0 10px 0;
-    padding: 5px;
-    background-color: #f5f5f5;
-    border-bottom: 1px solid #ddd;
+button.MuiButtonBase-root {
+    font-size: .9em;
+    border-bottom: solid 1px $border-color;
+}
+.MuiBox-root {
+    background-color: $background-color-light
 }
 
-.diff {
+button.MuiButton {
+
+}
+
+button.Mui-selected {
     background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    width: 100%;
 }
 
-.hunk {
-    white-space: pre;
-}
+.MuiTabPanel-root,
+.css-13xfq8m-MuiTabPanel-root,
+.css-13xfq8m-MuiTabPanel-root {
+    margin-top: 0 !important;
+    padding: 0 !important;
 
-.gutter {
-    text-align: right;
-    color: #999;
-}
-
-.line {
-    white-space: pre;
-
-    &.insert {
-        background-color: #e6ffed;
-        color: #004d40; // Dark green color for text on insert lines
-    }
-
-    &.delete {
-        background-color: #ffeef0;
-        color: #c62828; // Dark red color for text on delete lines
-    }
-}
-
-.line-number {
-    color: #999;
-    padding-right: 10px;
-}
-
-.code {
+    font-family: $font-stack-mono;
+    overflow: auto;
+    background-color: $background-color-light;
+    border: 1px solid $border-color !important;
+    border-radius: $border-radius;
     text-align: left;
-    color: #333 !important; // Ensures text is visible on white background
-}
-
-.diff-viewer .diff-added {
-    background-color: #e6ffed; /* Light green background */
-}
-
-/* Specific styles for the entire diff section for deleted lines */
-.diff-viewer .diff-removed {
-    background-color: #ffeef0; /* Light red background */
-}
-
-/* Specific styles for individual added lines */
-.diff-viewer .diff-code-insert {
-    background-color: #d4edda; /* Slightly darker green for added lines */
-    color: #155724; /* Dark green text color for added lines */
-}
-
-/* Specific styles for individual deleted lines */
-.diff-viewer .diff-code-delete {
-    background-color: #f8d7da; /* Slightly darker red for deleted lines */
-    color: #721c24; /* Dark red text color for deleted lines */
-}
-
-.input-box {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px; /* Distance between the input box and the diff viewer */
-}
 
-.input {
-    padding: 10px 15px;
-    font-size: 16px;
-    border: 2px solid #ddd; /* Light grey border */
-    border-radius: 4px 0 0 4px; /* Rounded corners on the left side */
-    outline: none; /* Removes the default focus outline */
-    margin-right: -1px; /* Ensures the button and input touch */
-}
-
-.btn {
-    padding: 10px 15px;
-    font-size: 16px;
-    background-color: #3498db; /* A nice blue shade */
-    border: 2px solid #3498db; /* Same as background color */
-    color: white;
-    cursor: pointer;
-    border-radius: 0 4px 4px 0; /* Rounded corners on the right side */
-    outline: none; /* Removes the default focus outline */
-    transition: background-color 0.2s, border-color 0.2s, color 0.2s;
-}
-
-.btn:hover,
-.btn:focus {
-    background-color: #2980b9; /* A darker blue on hover/focus */
-    border-color: #2980b9;
-}
-
-/* Responsive adjustments */
-@media (max-width: 600px) {
-    .input-box {
-        flex-direction: column;
+    h3 {
+        margin: 0 0 10px;
+        padding: 8px;
+        font-size: 1.5em !important;
+        background-color: $background-color-light;
+        border: 1px solid $border-color !important;
+        border-radius: $border-radius !important;
     }
 
-    .input,
-    .btn {
-        width: 100%; /* Full width on smaller screens */
-        border-radius: 4px; /* Rounded corners on all sides */
-    }
+    .file-diff {
+        margin-bottom: 20px;
+        color: #444;
 
-    .input {
-        margin-bottom: 10px; /* Distance between the input and the button */
-        margin-right: 0; /* Reset the margin since they are now stacked */
+        font-family: $font-stack-mono;
+        overflow: auto;
+        padding: 10px;
+        background-color: $background-color-light;
+        border: 1px solid $border-color !important;
+        border-radius: $border-radius;
+        text-align: left;
+
+        .diff {
+            background-color: white;
+            border: 1px solid $border-color;
+            border-radius: $border-radius;
+            width: 100%;
+
+        }
     }
 }
 
-.input-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px; /* Distance between the input box and the diff viewer */
-}
-
-.input {
-    padding: 10px 15px;
-    font-size: 16px;
-    border: 2px solid #ddd; /* Light grey border */
-    border-radius: 4px 0 0 4px; /* Rounded corners on the left side */
-    outline: none; /* Removes the default focus outline */
-    margin-right: -1px; /* Ensures the button and input touch */
-}
-
-.btn {
-    padding: 10px 15px;
-    font-size: 16px;
-    background-color: #3498db; /* A nice blue shade */
-    border: 2px solid #3498db; /* Same as background color */
-    color: white;
-    cursor: pointer;
-    border-radius: 0 4px 4px 0; /* Rounded corners on the right side */
-    outline: none; /* Removes the default focus outline */
-    transition: background-color 0.2s, border-color 0.2s, color 0.2s;
-}
-
-.btn:hover,
-.btn:focus {
-    background-color: #2980b9; /* A darker blue on hover/focus */
-    border-color: #2980b9;
-}
-
-/* Responsive adjustments */
-@media (max-width: 600px) {
-    .input-box {
-        flex-direction: column;
-    }
-
-    .input,
-    .btn {
-        width: 100%; /* Full width on smaller screens */
-        border-radius: 4px; /* Rounded corners on all sides */
-    }
-
-    .input {
-        margin-bottom: 10px; /* Distance between the input and the button */
-        margin-right: 0; /* Reset the margin since they are now stacked */
-    }
-}
